Aws EKS Deployment Example initial. (#273)
Co-authored-by: reecexlm <reecexlm@gmail.com>

--- a/docs/deployment-examples/aws-eks-k8-helm/terraform/charts/reference/templates/deployment.yaml
+++ b/docs/deployment-examples/aws-eks-k8-helm/terraform/charts/reference/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
         app: reference
     spec:
       containers:
-      - name: reference-server
+      - name: reference
         image: stellar/anchor-platform:750858c
         args: ["--anchor-reference-server"]
         imagePullPolicy: Always
