--- a/docs/deployment-examples/aws-eks-k8-helm/terraform/charts/reference/templates/ingress.yaml
+++ b/docs/deployment-examples/aws-eks-k8-helm/terraform/charts/reference/templates/ingress.yaml
@@ -4,22 +4,25 @@ metadata:
   name: {{ .Release.Name }}-ingress
   namespace: anchor-platform
   annotations:
-    kubernetes.io/ingress.class: alb
-    alb.ingress.kubernetes.io/group.name: reference
     alb.ingress.kubernetes.io/scheme: internal
-  labels:
-    app: reference-ingress
-    dap: pap
+    alb.ingress.kubernetes.io/healthcheck-path: /health
 spec:
+  ingressClassName: alb
   rules:
-    - host: references.stellaranchordemo.com
-      http:
+ #   - host: ref.stellaranchordemo.com
+    - http:
         paths:
+#          - path: /health
+ #           pathType: Prefix
+  #          backend:
+   #           service:
+    #            name: {{ .Release.Name }}-service
+     #           port:
+      #            number: 8081
           - path: /
-            pathType: ImplementationSpecific
+            pathType: Prefix
             backend:
               service:
                 name: {{ .Release.Name }}-service
                 port:
                   number: 8081
-            
