--- a/docs/deployment-examples/aws-eks-k8-helm/terraform/charts/sep/templates/configmap.yaml
+++ b/docs/deployment-examples/aws-eks-k8-helm/terraform/charts/sep/templates/configmap.yaml
@@ -46,12 +46,12 @@ data:
         # clientAttributionDenyList: # use this if we want to black list.
         authTimeout: 900
         jwtTimeout: 86400
-        signingSeed: [signingseed]
+        signingSeed: SBTBRGMPWNLXOZQQQXXZRJKCZPYTAZT5FC4VEAECF2HOBCONTSH4EXKS
       # sep-12
       sep12:
         enabled: true
-        #customerIntegrationEndpoint: http://ref.stellaranchordemo.com
-        customerIntegrationEndpoint: http://10.0.1.23:8081
+        customerIntegrationEndpoint: http://ref.stellaranchordemo.com
+        #customerIntegrationEndpoint: http://10.0.1.23:8081
     
       # sep-24
       sep24:
