--- a/docs/deployment-examples/aws-eks-k8-helm/terraform/charts/sep/templates/ingress.yaml
+++ b/docs/deployment-examples/aws-eks-k8-helm/terraform/charts/sep/templates/ingress.yaml
@@ -21,12 +21,67 @@ spec:
   - host: www.stellaranchordemo.com
     http:
       paths:
-      - path: /
-        pathType: ImplementationSpecific
+      - path: /info
+        pathType: Prefix
         backend:
           service:
             name: {{ .Release.Name }}-service
             port:
               number: 8080
-
-
+      - path: /transactions
+        pathType: Prefix
+        backend:
+          service:
+            name: {{ .Release.Name }}-service
+            port:
+              number: 8080
+      - path: /.well-known/stellar.toml
+        pathType: Prefix
+        backend:
+          service:
+            name: {{ .Release.Name }}-service
+            port:
+              number: 8080
+      - path: /auth
+        pathType: Exact
+        backend:
+          service:
+            name: {{ .Release.Name }}-service
+            port:
+              number: 8080
+      - path: /sep6
+        pathType: Prefix
+        backend:
+          service:
+            name: {{ .Release.Name }}-service
+            port:
+              number: 8080
+      - path: /sep12
+        pathType: Prefix
+        backend:
+          service:
+            name: {{ .Release.Name }}-service
+            port:
+              number: 8080      
+      - path: /sep24
+        pathType: Prefix
+        backend:
+          service:
+            name: {{ .Release.Name }}-service
+            port:
+              number: 8080
+      - path: /sep31
+        pathType: Prefix
+        backend:
+          service:
+            name: {{ .Release.Name }}-service
+            port:
+              number: 8080
+      - path: /sep38
+        pathType: Prefix
+        backend:
+          service:
+            name: {{ .Release.Name }}-service
+            port:
+              number: 8080
+  
