--- a/docs/deployment-examples/aws-eks-k8-helm/terraform/charts/sep/templates/deployment.yaml
+++ b/docs/deployment-examples/aws-eks-k8-helm/terraform/charts/sep/templates/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: sep-server
-        image: stellar/anchor-platform:750858c
+        image: reecemarkowsky/testing:latest
         args: ["--sep-server"]
         imagePullPolicy: Always
         ports:
