--- a/platform/src/main/resources/log4j2.yaml
+++ b/platform/src/main/resources/log4j2.yaml
@@ -41,7 +41,7 @@ Configutation:
     Root:
       level: info
       AppenderRef:
-        - ref: ${env:LOG_APPENDER:-console_json_appender}
+        - ref: ${env:LOG_APPENDER:-console_appender}
     Logger:
       - name: org.stellar
         level: debug
