--- a/docs/03 - Implementing the Anchor Server/Communication/Callbacks API.yml
+++ b/docs/03 - Implementing the Anchor Server/Communication/Callbacks API.yml
@@ -52,8 +52,15 @@ paths:
                         description: A `G...` stellar address or a `M...` [muxed stellar address](https://developers.stellar.org/docs/glossary/muxed-accounts/) of an **existing** account in the Stellar network.
                         type: string
                       memo:
-                        description: A memo used as a acomplementary identifier for a Stellar account address.
+                        description: The memo to attach to the Stellar payment.
                         type: string
+                      memo_type:
+                        description: The type of memo to attach to the Stellar payment (text, hash, or id).
+                        type: string
+                        enum:
+                          - text
+                          - hash
+                          - id
                     required:
                       - stellar_address
 
