--- a/docs/resources/deployment-examples/example-fargate/example_config/reference_config.yaml
+++ b/docs/resources/deployment-examples/example-fargate/example_config/reference_config.yaml
@@ -7,7 +7,7 @@ server:
 #
 anchor.settings:
   version: 0.0.1
-  platformApiEndpoint: https://www.stellaranchordemo.com
+  platformApiEndpoint: https://www.dev.redchapina.com
 event:
   # The listener type. values: [kafka, sqs, amqp]
   # If the listener is kafka, the kafka listener is configured in kafka.listener section.
