--- a/docs/resources/deployment-examples/example-fargate/example_config/stellar.toml
+++ b/docs/resources/deployment-examples/example-fargate/example_config/stellar.toml
@@ -1,4 +1,4 @@
-ACCOUNTS = ["GCHLHDBOKG2JWMJQBTLSL5XG6NO7ESXI2TAQKZXCXWXB5WI2X6W233PR"]
+ACCOUNTS = ["GBYYUBBCPO3YWWIQQZJAEFMJPKTUAXGKMUTVBBICBUR2VAZAWVTSFTYE","GCH3RMFPFA7DYESE6GR6YSYOMU6XKSQIUPLQX2DVTX7IXWG24PZEK6P3"]
 VERSION = "0.1.0"
 NETWORK_PASSPHRASE = "Test SDF Network ; September 2015"
 SIGNING_KEY = "GBYYUBBCPO3YWWIQQZJAEFMJPKTUAXGKMUTVBBICBUR2VAZAWVTSFTYE"
